src/objects/workday_payment_elections__x.object
<CustomObject>
    <description>workday.payment_elections</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.payment_elections</externalName>
    <fields>
        <fullName>default_country__c</fullName>
        <description>default_country</description>
        <externalDeveloperName>default_country</externalDeveloperName>
        <label>default_country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_currency__c</fullName>
        <description>default_currency</description>
        <externalDeveloperName>default_currency</externalDeveloperName>
        <label>default_currency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distribution__c</fullName>
        <description>distribution</description>
        <externalDeveloperName>distribution</externalDeveloperName>
        <label>distribution</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pay_type__c</fullName>
        <description>pay_type</description>
        <externalDeveloperName>pay_type</externalDeveloperName>
        <label>pay_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_account_number__c</fullName>
        <description>payment_account_number</description>
        <externalDeveloperName>payment_account_number</externalDeveloperName>
        <label>payment_account_number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_account_type__c</fullName>
        <description>payment_account_type</description>
        <externalDeveloperName>payment_account_type</externalDeveloperName>
        <label>payment_account_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <description>payment_method</description>
        <externalDeveloperName>payment_method</externalDeveloperName>
        <label>payment_method</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>worker_id__c</fullName>
        <description>worker_id</description>
        <externalDeveloperName>worker_id</externalDeveloperName>
        <label>worker_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.payment_elections</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>status__c</columns>
        <columns>pay_type__c</columns>
        <columns>payment_account_type__c</columns>
        <columns>payment_method__c</columns>
        <columns>payment_account_number__c</columns>
        <columns>default_currency__c</columns>
        <columns>distribution__c</columns>
        <columns>default_country__c</columns>
        <columns>worker_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>workday.payment_elections</pluralLabel>
</CustomObject>